add_library(
        environment
        OrderList/OrderList.cpp OrderList/OrderList.h
        Machine/Machine.cpp Machine/Machine.h
        Box/Box.cpp Box/Box.h Table/Table.cpp Table/Table.h Plate/Plate.cpp Plate/Plate.h Environment/Environment.cpp Environment/Environment.h Environment/Environment.cpp Environment/Environment.h Controller/Controller.cpp Controller/Controller.h)